Change main page to describe some info about Eisenhower matrix

--- a/MvcEisenhower/MvcEisenhower/Views/Home/Index.cshtml
+++ b/MvcEisenhower/MvcEisenhower/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Eisenhower Matrix</h1>
+    <p>Read this <a href="https://slab.com/blog/eisenhower-matrix/">to understand what Eisenhower Matrix is all about</a>.</p>
+    <p>or if you like movies in polish <a href="https://www.youtube.com/watch?v=dauLYfv_5Uo">here it is by Piotr Nabielec</a>.</p>
+    <p>Here is <a href="https://slab.com/blog/eisenhower-matrix/#prioritizing-your-tasks">how can you analyse yourself - where are you at Eisenhower Matrix</a>.</p>
+    <p>And here is <a href="https://slab.com/blog/eisenhower-matrix/#investing-time-in-making-time">how to improve in time management</a>.</p>
 </div>
