exchange model primary key: Id --> TaskID

--- a/MvcEisenhower/MvcEisenhower/Views/Tasks/Index.cshtml
+++ b/MvcEisenhower/MvcEisenhower/Views/Tasks/Index.cshtml
@@ -21,8 +21,8 @@
                 {
                     <li>
                         @Html.DisplayFor(modelItem => item.Name)
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-action="Edit" asp-route-id="@item.TaskID">Edit</a>
+                        <a asp-action="Delete" asp-route-id="@item.TaskID">Delete</a>
                     </li>
                 }
             }
@@ -36,8 +36,8 @@
                 {
                     <li>
                         @Html.DisplayFor(modelItem => item.Name)
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-action="Edit" asp-route-id="@item.TaskID">Edit</a>
+                        <a asp-action="Delete" asp-route-id="@item.TaskID">Delete</a>
                     </li>
                 }
             }
@@ -52,8 +52,8 @@
                 {
                     <li>
                         @Html.DisplayFor(modelItem => item.Name)
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-action="Edit" asp-route-id="@item.TaskID">Edit</a>
+                        <a asp-action="Delete" asp-route-id="@item.TaskID">Delete</a>
                     </li>
                 }
             }
@@ -67,8 +67,8 @@
                 {
                     <li>
                         @Html.DisplayFor(modelItem => item.Name)
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-action="Edit" asp-route-id="@item.TaskID">Edit</a>
+                        <a asp-action="Delete" asp-route-id="@item.TaskID">Delete</a>
                     </li>
                 }
             }
