--- a/MvcEisenhower/MvcEisenhower/Views/Shared/_Layout.cshtml
+++ b/MvcEisenhower/MvcEisenhower/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tasks" asp-action="Index">Todo-Tasks</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
